# HotPin_WebServer

./: .gitignore  HotPin Firmware Product Requirement.md  HotPin WebServer Product Requirement.md  check_server.py  proj.txt
hotpin-firmware/: .env  .env.example  CMakeLists.txt  CONFIGURATION.md  FIXES_SUMMARY.md  README.md  TESTING_INSTRUCTIONS.md  build_logs.txt  generate_config.bat  generate_config.sh  sdkconfig  sdkconfig.defaults  sdkconfig.local  sdkconfig.local.example  serial_monitor_logs.txt
hotpin-firmware/main/: CMakeLists.txt  Kconfig.projbuild  audio_handling.c  camera_handling.c  config.h  dynamic_config.c  dynamic_config.h  globals.c  idf_component.yml  main.c  main.h  network_discovery.c  network_discovery.h  network_handling.c  state_management.c
hotpin-firmware/tools/: config_generator.py  requirements.txt
hotpin-webserver/: .env.example  FIXES_SUMMARY.md  GROQ_WHISPER_IMPLEMENTATION.md  HOTPIN_WEBSERVER_SYSTEM_DESIGN.md  POCKETSPHINX_GUIDE.md  README.md  TERMUX_INSTALLATION.md  requirements-termux.txt  requirements.txt  test_end_to_end.py  test_server_start.py  webserver_logs.txt
hotpin-webserver/hotpin/: __init__.py  audio_ingestor.py  config.py  discovery.py  image_handler.py  llm_client.py  server.py  session_manager.py  storage_manager.py  stt_worker.py  tts_streamer.py  tts_worker.py  utils.py  ws_manager.py
hotpin-webserver/tests/: test_basic.py  test_discovery.py
hotpin-webserver/tools/: python_ws_client.py  websocket_test.html
